base/gitea/virtual_service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitea
  namespace: gitea
spec:
  hosts:
  - git.0x44.pw
  gateways:
  - gitea-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: frontend
